Use client-core PR 3144 (to possibly fix build)

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-analytics": "superdesk/superdesk-analytics#master",
-        "superdesk-core": "superdesk/superdesk-client-core#develop",
+        "superdesk-core": "superdesk/superdesk-client-core#pull/3144/head",
         "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
 }
