--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
 cache:
     - pip
     - npm
+    - directories:
+        - client/node_modules
 
 before_install:
     - nvm install 6.10
