--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,4 @@ newrelic>=2.66,<2.67
 
 -e git+git://github.com/superdesk/superdesk-core.git@1.30#egg=Superdesk-Core
 -e git+git://github.com/superdesk/superdesk-analytics.git@963c6e1#egg=superdesk-analytics
--e git+git://github.com/marklark86/superdesk-planning.git@SDESK-4620#egg=superdesk-planning
+-e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
