--- a/docker/common.yml
+++ b/docker/common.yml
@@ -7,7 +7,7 @@ redis:
   container_name: redis
 
 elastic:
-  image: elasticsearch:7.4.0
+  image: elasticsearch:2
   container_name: elastic
   environment:
     - discovery.type=single-node
@@ -27,11 +27,11 @@ grammalecte:
 #   build: logstash/
 #   container_name: logstash
 
-kibana:
-  build: kibana/
-  container_name: kibana
-  environment:
-    - ELASTICSEARCH_URL=http://elastic:9200
+# kibana:
+#   build: kibana/
+#   container_name: kibana
+#   environment:
+#     - ELASTICSEARCH_URL=http://elastic:9200
 
 superdesk:
   build: ../
@@ -49,8 +49,11 @@ superdesk:
     - ELASTICSEARCH_INDEX=superdesk
     - CELERY_BROKER_URL=redis://redis:6379/1
     - REDIS_URL=redis://redis:6379/1
-    - LOG_SERVER_ADDRESS=logstash
-    - LOG_SERVER_PORT=5555
+    - LOG_SERVER_ADDRESS=
+    - LOG_SERVER_PORT=
+    - ANALYTICS_ENABLE_SCHEDULED_REPORTS=false
+    - HIGHCHARTS_SERVER_HOST=
+    - HIGHCHARTS_SERVER_PORT=
     - AMAZON_ACCESS_KEY_ID
     - AMAZON_CONTAINER_NAME
     - AMAZON_REGION
