Disable unused environment variables

--- a/docker/common.yml
+++ b/docker/common.yml
@@ -49,11 +49,11 @@ superdesk:
     - ELASTICSEARCH_INDEX=superdesk
     - CELERY_BROKER_URL=redis://redis:6379/1
     - REDIS_URL=redis://redis:6379/1
-    - LOG_SERVER_ADDRESS=
-    - LOG_SERVER_PORT=
+    - LOG_SERVER_ADDRESS
+    - LOG_SERVER_PORT
     - ANALYTICS_ENABLE_SCHEDULED_REPORTS=false
-    - HIGHCHARTS_SERVER_HOST=
-    - HIGHCHARTS_SERVER_PORT=
+    - HIGHCHARTS_SERVER_HOST
+    - HIGHCHARTS_SERVER_PORT
     - AMAZON_ACCESS_KEY_ID
     - AMAZON_CONTAINER_NAME
     - AMAZON_REGION
