fix(build): Make master a vanilla Superdesk install Optional Superdesk modules such as Planning, Analytics and Publisher should use separate branches from the Vanilla Superdesk builds

--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,6 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "tomaskikutis/superdesk-analytics#next",
-        "superdesk-core": "superdesk/superdesk-client-core#develop",
-        "superdesk-publisher": "superdesk/superdesk-publisher#master"
+        "superdesk-core": "superdesk/superdesk-client-core#develop"
     }
 }
