--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,6 @@ newrelic>=2.66,<2.67
 flask==0.12.2
 flask-babel==0.12.2
 pymongo==3.8.0
-superdesk-core>=1.32,<1.33
+superdesk-core==1.32.2
 
 -e git+git://github.com/superdesk/superdesk-planning.git@v1.7.0#egg=superdesk-planning
