--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
         "superdesk-core": "superdesk/superdesk-client-core#release/1.33",
-        "superdesk-planning": "superdesk/superdesk-planning#v1.7.0"
+        "superdesk-planning": "github:tomaskikutis/superdesk-planning#move-planning-extension-from-core",
+        "superdesk-planning-extension": "1.0.1"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
