--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,4 @@
 gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
-superdesk-core==1.33rc1
-werkzeug<1.0
+-e git+git://github.com/superdesk/superdesk-core.git@release/1.33#egg=Superdesk-Core
