--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.swp
 *.swo
 *.pid
+*.log
 *#
 .#*
 *TAGS
@@ -46,4 +47,3 @@ include/
 /superdesk-content-api/
 client/index.html
 client/templates-cache.js
-client/npm-debug.log
