Update planning publisher (#3145)
* Merge with master. Update cores. Use planning extension.
* Handle comments.
* Update gitignore.
* Use superdesk-publisher ui v2.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .env
+.python-version
 /.project
 /.pydevproject
 *.pyc
 *.swp
 *.swo
 *.pid
+*.log
 *#
 .#*
 *TAGS
@@ -19,7 +21,7 @@ env/
 bin/
 lib/
 man/
-src/
+/server/src/
 dist/
 node_modules
 .settings
@@ -45,4 +47,3 @@ include/
 /superdesk-content-api/
 client/index.html
 client/templates-cache.js
-client/npm-debug.log
