--- a/docker/common.yml
+++ b/docker/common.yml
@@ -1,24 +1,34 @@
 mongodb:
   image: mongo:3
+  container_name: mongodb
 
 redis:
   image: redis:3
+  container_name: redis
 
 elastic:
   image: elasticsearch:2
+  container_name: elastic
 
 postfix:
   image: catatnight/postfix
+  container_name: postfix
   environment:
   - maildomain=mail.sourcefabric.org
   - smtp_user=user:pwd
 
+grammalecte:
+  build: grammalecte/
+  container_name: grammalecte
+
 superdesk:
   build: ../
+  container_name: superdesk
   environment:
    - SUPERDESK_URL=http://127.0.0.1/api
    - SUPERDESK_WS_URL=ws://127.0.0.1/ws
    - SUPERDESK_CLIENT_URL=http://127.0.0.1
+   - GRAMMALECTE_URL=http://grammalecte:9999
    - MONGO_URI=mongodb://mongodb/test
    - PUBLICAPI_MONGO_URI=mongodb://mongodb/test_pa
    - LEGAL_ARCHIVE_URI=mongodb://mongodb/test_la
