--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: "3.5"
 
 sudo: false
-dist: trusty
+dist: xenial
 
 services:
     - mongodb
@@ -14,10 +14,8 @@ addons:
   apt:
     sources:
     - mongodb-3.0-precise
-    - google-chrome
     packages:
     - mongodb-org-server
-    - google-chrome-stable
 
 cache:
   directories:
@@ -30,10 +28,6 @@ before_install:
     - node --version
     - npm install -g npm@3
     - npm install -g grunt-cli
-    - pip install requests
-    - export DISPLAY=:99.0
-    - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
-    - export CHROME_BIN=`which google-chrome` && $CHROME_BIN --version ;
 
 install:
     - cd server && pip install -r dev-requirements.txt && cd ..
@@ -41,5 +35,5 @@ install:
 
 script:
     - cd server && flake8 && cd ..
-    - cd client && grunt build && cd ..
+    - cd client && node --max-old-space-size=4096 `which grunt` build && cd ..
     - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
