--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,9 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#7356391",
-        "superdesk-planning": "superdesk/superdesk-planning#master",
-        "superdesk-publisher": "superdesk/superdesk-publisher#master"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33",
+        "superdesk-publisher": "superdesk/superdesk-publisher#v2.0",
+        "superdesk-planning": "superdesk/superdesk-planning#next",
+        "superdesk-planning-extension": "1.0.1"
     }
 }
