use a release branch

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,6 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33"
+        "superdesk-core": "github:superdesk/superdesk-client-core#1.33"
     }
 }
