--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,5 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
--e git+git://github.com/superdesk/superdesk-core.git@1.31#egg=Superdesk-Core
--e git+git://github.com/superdesk/superdesk-analytics.git@963c6e1#egg=superdesk-analytics
+-e git+git://github.com/superdesk/superdesk-core.git@develop#egg=Superdesk-Core
 -e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
