--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33",
+        "superdesk-planning": "github:superdesk/superdesk-planning#master",
+        "superdesk-planning-extension": "1.0.1"
     }
 }
