Use develop branch for analytics

--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-analytics": "tomaskikutis/superdesk-analytics#next",
-        "superdesk-core": "superdesk/superdesk-client-core#develop",
-        "superdesk-publisher": "superdesk/superdesk-publisher#master"
+        "superdesk-analytics": "superdesk/superdesk-analytics#develop",
+        "superdesk-core": "superdesk/superdesk-client-core#develop"
     }
 }
