--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,4 +3,4 @@ honcho==1.0.1
 newrelic>=2.66,<2.67
 
 -e git+git://github.com/superdesk/superdesk-core.git@develop#egg=Superdesk-Core
--e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
+-e git+git://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
