Use develop branch for planning (ansa)

--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
     "dependencies": {
         "superdesk-core": "~1.33.0",
-        "superdesk-planning": "github:tomaskikutis/superdesk-planning#move-planning-extension-from-core",
-        "superdesk-planning-extension": "1.0.1"
+        "superdesk-planning": "github:superdesk/superdesk-planning#develop"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
