Use develop branch for planning (planning-publisher)

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33",
         "superdesk-publisher": "superdesk/superdesk-publisher#v2.0",
-        "superdesk-planning": "superdesk/superdesk-planning#next",
-        "superdesk-planning-extension": "1.0.1"
+        "superdesk-planning": "superdesk/superdesk-planning#develop"
     }
 }
