--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,4 +8,4 @@ pymongo==3.8.0
 werkzeug<1.0
 superdesk-core>=1.33,<1.34
 
--e git+git://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
+-e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
