Change from develop to master branch

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,6 @@
     "dependencies": {
         "superdesk-core": "github:superdesk/superdesk-client-core#release/1.33",
         "superdesk-publisher": "superdesk/superdesk-publisher#v2.0",
-        "superdesk-planning": "superdesk/superdesk-planning#develop"
+        "superdesk-planning": "superdesk/superdesk-planning#master"
     }
 }
