--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "superdesk-core": "~1.33.0",
-        "superdesk-planning": "github:superdesk/superdesk-planning#master"
+        "superdesk-planning": "~1.33.0"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
