--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,6 @@ flask==0.12.2
 flask-babel==0.12.2
 pymongo==3.8.0
 werkzeug<1.0
-superdesk-core>=1.33,<1.34
 
--e git+git://github.com/superdesk/superdesk-planning.git@master#egg=superdesk-planning
+superdesk-core>=1.33,<1.34
+superdesk-planning>=1.33,<1.34
