--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,7 +6,6 @@ flask==0.12.2
 flask-babel==0.12.2
 pymongo==3.8.0
 werkzeug<1.0
+
 superdesk-core>=1.33,<1.34
-
--e git+git://github.com/superdesk/superdesk-planning.git@v1.7.0#egg=superdesk-planning
-
+superdesk-planning>=1.33,<1.34
