--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,5 +7,6 @@ flask-babel==0.12.2
 pymongo==3.8.0
 werkzeug<1.0
 
-superdesk-core>=1.33,<1.34
 superdesk-planning>=1.33,<1.34
+
+git+git://github.com/superdesk/superdesk-core.git@release/1.34#egg=superdesk-core
