--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,6 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
-git+git://github.com/superdesk/superdesk-core.git@release/1.34#egg=Superdesk-Core
-git+git://github.com/superdesk/superdesk-planning.git@release/1.33.1#egg=superdesk-planning
+git+git://github.com/superdesk/superdesk-core.git@release/2.0#egg=Superdesk-Core
+git+git://github.com/superdesk/superdesk-planning.git@release/2.0#egg=superdesk-planning
+git+git://github.com/superdesk/superdesk-analytics.git@release/2.0#egg=superdesk-analytics
