--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.29.3",
-        "superdesk-planning": "superdesk/superdesk-planning#v1.5",
-        "superdesk-publisher": "superdesk/superdesk-publisher#v1.4.1"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/2.0",
+        "superdesk-planning": "github:superdesk/superdesk-planning#release/2.0",
+        "superdesk-publisher": "superdesk/superdesk-publisher#v2.0"
     }
 }
