--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,3 +4,4 @@ newrelic>=2.66,<2.67
 
 -e git+git://github.com/superdesk/superdesk-core.git@release/2.0#egg=superdesk-core
 -e git+git://github.com/superdesk/superdesk-planning.git@release/2.0#egg=superdesk-planning
+-e git+git://github.com/superdesk/superdesk-analytics.git@release/2.0#egg=superdesk-analytics
