--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#release/1.34",
-        "superdesk-planning": "superdesk/superdesk-planning#release/1.33.1"
+        "superdesk-core": "superdesk/superdesk-client-core#develop",
+        "superdesk-planning": "superdesk/superdesk-planning#develop"
     },
     "devDependencies": {
         "superdesk-code-style": "^1.1.1"
