--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,5 +5,4 @@ newrelic>=2.66,<2.67
 -e git+git://github.com/superdesk/superdesk-core.git@sams#egg=Superdesk-Core
 -e git+git://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
 -e git+git://github.com/superdesk/superdesk-analytics.git@develop#egg=superdesk-analytics
--e git+git://github.com/superdesk/sams.git@develop#egg=sams-client&subdirectory=src/clients/python/
-
+-e git+git://github.com/superdesk/sams.git@develop#egg=sams_client&subdirectory=src/clients/python/
