--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
     "dependencies": {
         "superdesk-core": "superdesk/superdesk-client-core#release/1.34",
-        "superdesk-planning": "superdesk/superdesk-planning#release/1.33.1"
+        "superdesk-planning": "superdesk/superdesk-planning#v1.33.1"
     },
     "devDependencies": {
-        "superdesk-code-style": "^1.1.1"
+        "superdesk-code-style": "1.3.0"
     },
     "scripts": {
         "lint": "eslint --ext .js --ext .jsx ansa"
