--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -1,4 +1,11 @@
 [flake8]
-max-line-length=120
-exclude=env,bin,lib,include,src
-ignore=F811,D200,D202,D205,D400,D401,D100,D101,D102,D103,D104,D105,D107,W503,W504,W605,F401,E261,F841
+max-line-length = 120
+exclude = env,bin,lib,include,src
+ignore = F811,D200,D202,D205,D400,D401,D100,D101,D102,D103,D104,D105,D107,W503,W504,W605,F401,E261,F841
+
+[mypy]
+python_version = 3.6
+warn_return_any = False
+warn_unused_configs = False
+ignore_missing_imports = True
+allow_untyped_globals = True
