--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,6 @@
     "name": "superdesk",
     "license": "AGPL-3.0",
     "dependencies": {
-        "superdesk-core": "~2.0.0"
+        "superdesk-core": "superdesk/superdesk-client-core#master"
     }
 }
