--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,5 +7,5 @@ flask-babel==0.12.2
 pymongo==3.8.0
 werkzeug<1.0
 
-git+git://github.com/superdesk/superdesk-core.git@release/1.34#egg=superdesk-core
-git+git://github.com/superdesk/superdesk-planning.git@release/1.33.1#egg=superdesk-planning
+git+git://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+git+git://github.com/superdesk/superdesk-planning.git@develop#egg=superdesk-planning
