--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "superdesk-core": "superdesk/superdesk-client-core#release/1.34",
-        "superdesk-planning": "superdesk/superdesk-planning#v1.33.1"
+        "superdesk-core": "github:superdesk/superdesk-client-core#release/1.34",
+        "superdesk-planning": "github:superdesk/superdesk-planning#v1.33.1"
     },
     "devDependencies": {
         "superdesk-code-style": "1.3.0"
