--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,61 +1,86 @@
-logstash:
-  extends:
-    file: common.yml
-    service: logstash
-  links:
-  - elastic
+version: "2.4"
+services:
 
-mongodb:
-  extends:
-    file: common.yml
-    service: mongodb
+  mongodb:
+    image: mongo:3
+    container_name: mongodb
 
-redis:
-  extends:
-    file: common.yml
-    service: redis
+  redis:
+    image: redis:3
+    container_name: redis
 
-kibana:
-  extends:
-    file: common.yml
-    service: kibana
-  links:
-  - elastic
-  ports:
-  - "5601:5601"
+  elastic:
+    image: elasticsearch:7.7.1
+    container_name: elastic
+    environment:
+    - xpack.security.enabled=false
+    - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
 
-elastic:
-  extends:
-    file: common.yml
-    service: elastic
+  postfix:
+    image: catatnight/postfix
+    container_name: postfix
+    environment:
+    - maildomain=mail.sourcefabric.org
+    - smtp_user=user:pwd
 
-postfix:
-  extends:
-    file: common.yml
-    service: postfix
+  superdesk-server:
+    build: ../server/
+    container_name: superdesk-server
+    links:
+    - redis
+    - mongodb
+    - elastic
+    - postfix
+    environment:
+    - WEB_CONCURRENCY=2
+    - SUPERDESK_CLIENT_URL=http://127.0.0.1
+    - GRAMMALECTE_URL=http://grammalecte:9999
+    - MONGO_URI=mongodb://mongodb/test
+    - PUBLICAPI_MONGO_URI=mongodb://mongodb/test_pa
+    - LEGAL_ARCHIVE_URI=mongodb://mongodb/test_la
+    - ARCHIVED_URI=mongodb://mongodb/test_ar
+    - ELASTICSEARCH_URL=http://elastic:9200
+    - ELASTICSEARCH_INDEX=superdesk
+    - CELERY_BROKER_URL=redis://redis:6379/1
+    - REDIS_URL=redis://redis:6379/1
+    - AMAZON_ACCESS_KEY_ID
+    - AMAZON_CONTAINER_NAME
+    - AMAZON_REGION
+    - AMAZON_SECRET_ACCESS_KEY
+    - REUTERS_USERNAME
+    - REUTERS_PASSWORD
+    - MAIL_SERVER=postfix
+    - MAIL_PORT=25
+    - MAIL_USE_TLS=false
+    - MAIL_USE_SSL=false
+    - MAIL_USERNAME=user
+    - MAIL_PASSWORD=pwd
+    - SENTRY_DSN
+    - SECRET_KEY
+    - CONTENTAPI_URL=http://localhost/capi
+    - CONTENTAPI_MONGO_URI=mongodb://mongodb/test_ca
 
-superdesk:
-  extends:
-    file: common.yml
-    service: superdesk
-  links:
-   - mongodb
-   - redis
-   - elastic
-   - logstash
-   - postfix
-   - pubapi
-  ports:
-   - "443:443"
-   - "80:80"
+  superdesk:
+    build: ../
+    container_name: superdesk
+    environment:
+    - SUPERDESK_URL=http://127.0.0.1/api
+    - SUPERDESK_WS_URL=ws://127.0.0.1/ws
+    - VIEW_DATE_FORMAT
+    - VIEW_TIME_FORMAT
+    - IFRAMELY_KEY
 
-pubapi:
-  extends:
-    file: common.yml
-    service: pubapi
-  links:
-   - mongodb
-   - redis
-   - elastic
-   - logstash
-   - postfix
+    links:
+    - superdesk-server
+    ports:
+    - "443:443"
+    - "80:80"
