--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,4 +2,4 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
--e git+git://github.com/superdesk/superdesk-core.git@ad861ac#egg=superdesk-core
+-e git+git://github.com/GyanP/superdesk-core.git@SDCP-390#egg=superdesk-core
