--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,27 @@
-FROM python:3.6
+FROM ubuntu:20.04
+
+ENV DEBIAN_FRONTEND=noninteractive 
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+python3 python3-dev python3-pip git gcc mongo-tools mongodb-clients \
+# lxml
+libxml2-dev libxslt-dev \
+# PIL
+libjpeg-dev zlib1g-dev \
+# magic
+libmagic-dev \
+&& rm -rf /var/lib/apt/lists/* 
 
 # install server
 WORKDIR /opt/superdesk/
-COPY requirements.txt ./
-RUN python3 -m pip install -U -r requirements.txt
-
-# copy server
-COPY . .
+COPY requirements.txt .
+RUN python3 -m pip install -U pip wheel setuptools && \
+python3 -m pip install -Ur requirements.txt
 
 ENV PYTHONUNBUFFERED=1
 ENV C_FORCE_ROOT=False
-ENV CELERYBEAT_SCHEDULE_FILENAME=/tmp/celerybeatschedule.db
-ENV TZ=Europe/London
 
-ENTRYPOINT ["honcho"]
-CMD ["start"]
+COPY . .
+
+ENTRYPOINT [ "/opt/superdesk/docker/start.sh" ]
+CMD ["honcho", "start"]
