--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -13,16 +13,26 @@ jobs:
         working-directory: server
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: docker/build-push-action@v2
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - 
+        name: Build and push image
+        uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          push: true
+          tags: sourcefabricoss/superdesk-test:latest
           context: server
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: superdesk/superdesk/superdesk-server
-          tag_with_ref: true
-          #username: ${{ secrets.DOCKER_USERNAME }}
-          #password: ${{ secrets.DOCKER_TOKEN }}
-          #repository: /superdesk-server
-          #tag_with_ref: true
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outpus.digest }}
