--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -31,8 +31,40 @@ jobs:
         id: docker_build
         with:
           push: true
-          tags: sourcefabricoss/superdesk-test:latest
+          tags: sourcefabricoss/superdesk-server:latest
           context: server
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outpus.digest }}
+
+  client:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: client
+
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Build and push image
+        uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          push: true
+          tags: sourcefabricoss/superdesk-client:latest
+          context: client
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outpus.digest }}
