update docker-compose for demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,32 @@
-version: "3"
+version: "3.2"
 services:
 
   mongodb:
-    image: mongo:4.4
-    container_name: mongodb
+    image: mongo:3.6
     networks:
       - superdesk
 
   redis:
     image: redis:3
-    container_name: redis
     networks:
       - superdesk
 
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
-    container_name: elastic
     environment:
-      - xpack.security.enabled=false
       - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    cap_add:
-      - IPC_LOCK
-    networks:
-      - superdesk
-
-  postfix:
-    image: catatnight/postfix
-    container_name: postfix
-    environment:
-      - maildomain=mail.sourcefabric.org
-      - smtp_user=user:pwd
     networks:
       - superdesk
 
   superdesk-server:
-    build: ./server/
-    image: sourcefabricoss/superdesk-server:latest
-    container_name: superdesk-server
+    image: sourcefabricoss/superdesk-server:demo
     depends_on:
       - redis
       - mongodb
       - elastic
-      - postfix
     environment:
       - WEB_CONCURRENCY=2
       - SUPERDESK_CLIENT_URL=http://localhost:8080
-      - GRAMMALECTE_URL=http://grammalecte:9999
       - MONGO_URI=mongodb://mongodb/test
       - PUBLICAPI_MONGO_URI=mongodb://mongodb/test_pa
       - LEGAL_ARCHIVE_URI=mongodb://mongodb/test_la
@@ -61,19 +35,6 @@ services:
       - ELASTICSEARCH_INDEX=superdesk
       - CELERY_BROKER_URL=redis://redis:6379/1
       - REDIS_URL=redis://redis:6379/1
-      - AMAZON_ACCESS_KEY_ID
-      - AMAZON_CONTAINER_NAME
-      - AMAZON_REGION
-      - AMAZON_SECRET_ACCESS_KEY
-      - REUTERS_USERNAME
-      - REUTERS_PASSWORD
-      - MAIL_SERVER=postfix
-      - MAIL_PORT=25
-      - MAIL_USE_TLS=false
-      - MAIL_USE_SSL=false
-      - MAIL_USERNAME=user
-      - MAIL_PASSWORD=pwd
-      - SENTRY_DSN
       - SECRET_KEY
       - CONTENTAPI_URL=http://localhost:8080/capi
       - CONTENTAPI_MONGO_URI=mongodb://mongodb/test_ca
@@ -82,9 +43,7 @@ services:
       - superdesk
 
   superdesk-client:
-    build: ./client/
-    image: sourcefabricoss/superdesk-client:latest
-    container_name: superdesk-client
+    image: sourcefabricoss/superdesk-client:demo
     environment:
       - SUPERDESK_URL=http://localhost:8080/api
       - SUPERDESK_WS_URL=ws://localhost:8080/ws
