--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-python3 python3-dev python3-pip git gcc mongo-tools mongodb-clients \
+python3 python3-dev python3-pip git gcc mongo-tools mongodb-clients curl \
 # lxml
 libxml2-dev libxslt-dev \
 # PIL
