--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,4 @@
 gunicorn>=20.0.4,<20.1
 honcho==1.0.1
-newrelic>=2.66,<2.67
 
--e git+git://github.com/superdesk/superdesk-core.git@master#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-core.git@v2.1.0#egg=superdesk-core
