--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,10 @@
-name: "CI"
+name: "Test"
 
 on:
   push:
   pull_request:
   schedule:
-    - cron: '0 5 * * *'
+    - cron: '30 1 * * 0'
 
 jobs:
 
